Fix: overflow

--- a/src/less/list.less
+++ b/src/less/list.less
@@ -5,6 +5,8 @@
 
     &-list {
         display: flex;
+        flex-wrap: wrap;
+        overflow: auto;
         position: relative;
         align-items: flex-start;
         justify-content: center;
